# copd_voice_analysis

./: .gitignore  copd_model.pkl  main.py  pyproject.toml  speech_statistics.xlsx  table_4_feature_selection.xlsx  table_4_metrics.xlsx  table_5_random_forest_results.xlsx
src/: feature_extractor.py  ml_pipeline.py  multicollinearity_check.py  stats_analysis.py
